# fattureincloud-python-sdk

./: .gitignore  .gitlab-ci.yml  .openapi-generator-ignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  functions.py  pyproject.toml  requirements.txt  sdk-version.yaml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: ArchiveApi.md  ArchiveDocument.md  AttachmentData.md  CashbookApi.md  CashbookEntry.md  CashbookEntryData.md  CashbookEntryDataDocument.md  CashbookEntryDocument.md  CashbookEntryIn.md  CashbookEntryInData.md  CashbookEntryInOut.md  CashbookEntryKind.md  CashbookEntryOut.md  CashbookEntryOutData.md  CashbookEntryType.md  City.md  Client.md  ClientType.md  ClientsApi.md  CompaniesApi.md  Company.md  CompanyInfo.md  CompanyInfoAccessInfo.md  CompanyInfoPlanInfo.md  CompanyInfoPlanInfoFunctions.md  CompanyInfoPlanInfoFunctionsStatus.md  CompanyInfoPlanInfoLimits.md  CompanyPlanUsage.md  CompanyType.md  ControlledCompany.md  CreateArchiveDocumentRequest.md  CreateArchiveDocumentResponse.md  CreateCashbookEntryRequest.md  CreateCashbookEntryResponse.md  CreateClientRequest.md  CreateClientResponse.md  CreateF24Request.md  CreateF24Response.md  CreateIssuedDocumentRequest.md  CreateIssuedDocumentResponse.md  (+232 more)
fattureincloud_python_sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
test/: test_archive_api.py  test_archive_document.py  test_attachment_data.py  test_cashbook_api.py  test_cashbook_entry.py  test_cashbook_entry_data.py  test_cashbook_entry_data_document.py  test_cashbook_entry_document.py  test_cashbook_entry_in.py  (+270 more)
(+508 files in other folders)
