[tool.poetry]
name = "fattureincloud_python_sdk"
version = "2.0.14"
description = "Fatture in Cloud API v2 - API Reference"
authors = ["info@fattureincloud.it"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fattureincloud-python-sdk/fattureincloud"
keywords = ["OpenAPI", "OpenAPI-Generator", "Fatture in Cloud API v2 - API Reference"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">= 1.10.5"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=4.4.6"
flake8 = ">=6.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
