[tool.poetry]
name = "fattureincloud_python_sdk"
version = "2.0.16"
description = "Fatture in Cloud API v2 - API Reference"
authors = ["Fatture in Cloud <info@fattureincloud.it>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fattureincloud/fattureincloud-python-sdk"
keywords = ["OpenAPI", "OpenAPI-Generator", "Fatture in Cloud API v2 - API Reference"]
include = ["fattureincloud_python_sdk/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
